--- a/.github/workflows/dependent-issues.yml
+++ b/.github/workflows/dependent-issues.yml
@@ -5,13 +5,19 @@ on:
   issues:
     types:
       - opened
+      - edited
+      - closed
       - reopened
+      - synchronize
   pull_request_target:
     types:
       - opened
+      - edited
+      - closed
       - reopened
+      - synchronize
   schedule:
-    - cron: '0 0 * * *' # check daily
+    - cron: '0 0/6 * * *' # every 6 hours
 
 jobs:
   check:
